# buffet

./: .env.example  .gitignore  ARCH.md  phase2-execution.md  planning.md
buffet-backend/: Cargo.toml
buffet-backend/migrations/: 20250412030914_create_users.sql  20250412030938_create_items.sql  20260202_create_strategies.sql  20260207145500_create_orders.sql  20260207_create_signals.sql  20260220100000_create_positions.sql  20260220110000_create_backtests.sql  20260316000001_add_strategy_status.sql  20260316000002_add_strategy_symbols.sql  20260316000003_add_backtest_config.sql  20260316000004_add_indexes.sql
buffet-backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
buffet-backend/src/actors/: backtest.rs  collector.rs  execution.rs  messages.rs  mod.rs  storage.rs  strategy.rs
buffet-backend/src/broker/: backtest_broker.rs  mod.rs
buffet-backend/src/handlers/: backtest.rs  collect.rs  health.rs  item.rs  mod.rs  order.rs  position.rs  signal.rs  strategy.rs  user.rs
buffet-backend/src/models/: backtest.rs  item.rs  market_data.rs  mod.rs  order.rs  position.rs  signal.rs  strategy.rs  user.rs
buffet-backend/src/providers/: mod.rs  normalize.rs  yahoo.rs
buffet-backend/src/routes/: backtest.rs  collect.rs  health.rs  item.rs  mod.rs  order.rs  position.rs  signal.rs  strategy.rs  user.rs
buffet-backend/src/tsdb/: mod.rs
buffet-backend/src/utils/: metrics.rs
buffet-backend/tests/api/: backtest.rs  health_check.rs  helpers.rs  main.rs  order_execution.rs  strategies.rs  strategy_execution.rs  users.rs
buffet-frontend/: Cargo.toml  index.html
buffet-frontend/src/: app.rs  main.rs  routes.rs  theme.rs
buffet-frontend/src/components/: loading.rs  mod.rs  run_backtest_modal.rs  sidebar.rs  strategy_form.rs
buffet-frontend/src/pages/: backtest_detail.rs  backtests.rs  dashboard.rs  mod.rs  strategies.rs  strategy_detail.rs
buffet-frontend/src/services/: api.rs
docs/: setup.md
