[package]
name = "buffet-backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "buffet-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8.3"
# Tower for middleware
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

# Database - SQLx with both SQLite and PostgreSQL support
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",  # For TimescaleDB
    "macros",
    "time",
    "chrono"
] }

# Async runtime
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"

# Actor framework
kameo = "0.19.2"

# Data processing (for intermediate calculations)
polars = { version = "0.36", features = ["lazy", "temporal"] }

# Market data APIs
reqwest = { version = "0.12", features = ["json"] }
yahoo_finance_api = "2.3.1"

# Technical analysis
ta = "0.5"

# Error handling
anyhow = "1.0.79"
thiserror = "2.0.12"

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"

# Dotenv for configuration
dotenvy = "0.15.7"

# UUID generation
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Time handling
time = { version = "0.3.41", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
async-trait = "0.1.88"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
serde_json = "1.0.140"