[package]
name = "buffet-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5.0" # For HTTP requests
wasm-bindgen-futures = "0.4"
lucide-yew = "0.1.0" # For icons
stylist = { version = "0.13.0", features = ["yew_integration"] } # For CSS-in-Rust
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "HtmlTextAreaElement"] }

[profile.release]
# Optimize for small size
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
